# typewriter

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
instructions/: keyboard_sounds.md  overview.md  technical_spec_cli.md
src/: main.rs
src/editor/: mod.rs  types.rs
src/input/: mod.rs
src/renderer/: mod.rs
src/sound/: mod.rs
